k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-user
spec:
  selector:
    app: grpc-user
  ports:
    - port: 50051
      targetPort: 50051
  type: ClusterIP
